--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Cart</title>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -19,6 +19,7 @@
                     <h4 class="product-subtext">Waffle with berries</h4>
                     <p class="product-price">$6.50</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-creme-brulee-desktop.jpg" alt="" class="product-image">
@@ -27,6 +28,7 @@
                     <h4 class="product-subtext">Vanilla Bean Creme Brulee</h4>
                     <p class="product-price">$7.00</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-macaron-desktop.jpg" alt="" class="product-image">
@@ -35,6 +37,7 @@
                     <h4 class="product-subtext">Macaron Mix of Five</h4>
                     <p class="product-price">$8.00</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-tiramisu-desktop.jpg" alt="" class="product-image">
@@ -43,6 +46,7 @@
                     <h4 class="product-subtext">Classic Tiramisu</h4>
                     <p class="product-price">$5.50</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-baklava-desktop.jpg" alt="" class="product-image">
@@ -51,6 +55,7 @@
                     <h4 class="product-subtext">Pistachio Baklava</h4>
                     <p class="product-price">$4.00</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-meringue-desktop.jpg" alt="" class="product-image">
@@ -59,6 +64,7 @@
                     <h4 class="product-subtext">Lemon Meringue Pie</h4>
                     <p class="product-price">$5.00</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-cake-desktop.jpg" alt="" class="product-image">
@@ -67,6 +73,7 @@
                     <h4 class="product-subtext">Red Velvet Cake</h4>
                     <p class="product-price">$4.50</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-brownie-desktop.jpg" alt="" class="product-image">
@@ -75,6 +82,7 @@
                     <h4 class="product-subtext">Salted Caramel Brownie</h4>
                     <p class="product-price">$5.50</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="cart-container">
                 <img src="/assets/images/image-panna-cotta-desktop.jpg" alt="" class="product-image">
@@ -83,6 +91,7 @@
                     <h4 class="product-subtext">Vanilla Panna Cotta</h4>
                     <p class="product-price">$6.50</p>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
         </div>
 
