added confirm cart dialogue box

--- a/index.html
+++ b/index.html
@@ -8,96 +8,107 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+
+
 </head>
 <body>
-    <div class="product-container">
-        <div class="menu-container">
-            <div class="cart-container">
-                <img src="/assets/images/image-waffle-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Waffle</p>
-                    <h4 class="product-subtext">Waffle with berries</h4>
-                    <p class="product-price">$6.50</p>
+    <div class="container">
+        <div class="product-container">
+            <h1 class="dessert-heading">Desserts</h1>
+            <div class="menu-container">
+                <div class="cart-container">
+                    <img src="/assets/images/image-waffle-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Waffle</p>
+                        <h4 class="product-subtext">Waffle with berries</h4>
+                        <p class="product-price">$6.50</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-creme-brulee-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Creme Brulee</p>
-                    <h4 class="product-subtext">Vanilla Bean Creme Brulee</h4>
-                    <p class="product-price">$7.00</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-creme-brulee-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Creme Brulee</p>
+                        <h4 class="product-subtext">Vanilla Bean Creme Brulee</h4>
+                        <p class="product-price">$7.00</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-macaron-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Macaron</p>
-                    <h4 class="product-subtext">Macaron Mix of Five</h4>
-                    <p class="product-price">$8.00</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-macaron-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Macaron</p>
+                        <h4 class="product-subtext">Macaron Mix of Five</h4>
+                        <p class="product-price">$8.00</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-tiramisu-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Tiramisu</p>
-                    <h4 class="product-subtext">Classic Tiramisu</h4>
-                    <p class="product-price">$5.50</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-tiramisu-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Tiramisu</p>
+                        <h4 class="product-subtext">Classic Tiramisu</h4>
+                        <p class="product-price">$5.50</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-baklava-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Baklava</p>
-                    <h4 class="product-subtext">Pistachio Baklava</h4>
-                    <p class="product-price">$4.00</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-baklava-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Baklava</p>
+                        <h4 class="product-subtext">Pistachio Baklava</h4>
+                        <p class="product-price">$4.00</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-meringue-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Pie</p>
-                    <h4 class="product-subtext">Lemon Meringue Pie</h4>
-                    <p class="product-price">$5.00</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-meringue-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Pie</p>
+                        <h4 class="product-subtext">Lemon Meringue Pie</h4>
+                        <p class="product-price">$5.00</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-cake-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Cake</p>
-                    <h4 class="product-subtext">Red Velvet Cake</h4>
-                    <p class="product-price">$4.50</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-cake-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Cake</p>
+                        <h4 class="product-subtext">Red Velvet Cake</h4>
+                        <p class="product-price">$4.50</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-brownie-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Brownie</p>
-                    <h4 class="product-subtext">Salted Caramel Brownie</h4>
-                    <p class="product-price">$5.50</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-brownie-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Brownie</p>
+                        <h4 class="product-subtext">Salted Caramel Brownie</h4>
+                        <p class="product-price">$5.50</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="cart-container">
-                <img src="/assets/images/image-panna-cotta-desktop.jpg" alt="" class="product-image">
-                <div class="product-details">
-                    <p class="product-name">Panna Cotta</p>
-                    <h4 class="product-subtext">Vanilla Panna Cotta</h4>
-                    <p class="product-price">$6.50</p>
+                <div class="cart-container">
+                    <img src="/assets/images/image-panna-cotta-desktop.jpg" alt="" class="product-image">
+                    <div class="product-details">
+                        <p class="product-name">Panna Cotta</p>
+                        <h4 class="product-subtext">Vanilla Panna Cotta</h4>
+                        <p class="product-price">$6.50</p>
+                    </div>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
             </div>
         </div>
 
-        <!-- <div class="confirm-cart">
-            <button class="confirm-order">Confirm Order</button>
-        </div> -->
+
+        <div class="confirm-cart">
+            <div class="cart-heading">Your Cart (0)</div>
+            <div class="empty-cart-icon">
+                <img src="/assets/images/illustration-empty-cart.svg" alt="" class="empty-cart-img" srcset="">
+            </div>
+            <div class="cart-message">Your added items will appear here</div>
+        </div>
     </div>
+
 </body>
 </html>
