added initial dynamic cart update

--- a/index.html
+++ b/index.html
@@ -103,12 +103,18 @@
 
         <div class="confirm-cart">
             <div class="cart-heading">Your Cart (0)</div>
-            <div class="empty-cart-icon">
-                <img src="/assets/images/illustration-empty-cart.svg" alt="" class="empty-cart-img" srcset="">
+            <div class="cart-content">
+                <div class="empty-cart-icon">
+                    <img src="/assets/images/illustration-empty-cart.svg" alt="" class="empty-cart-img" srcset="">
+                    <p>Your added items will appear here</p>
+                </div>
+                <ul class="cart-items-list"></ul>
             </div>
-            <div class="cart-message">Your added items will appear here</div>
+            <div class="cart-total">
+                <p>Total: $<span class="total-cost">0.00</span></p>
+            </div>
         </div>
-    </div>
+    </div> 
 
 </body>
 </html>
