added dynamic cart updating added css styling to the cart

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png">
     <script src="script.js" defer></script>
 
 
@@ -20,85 +21,86 @@
                     <img src="/assets/images/image-waffle-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Waffle</p>
-                        <h4 class="product-subtext">Waffle with berries</h4>
-                        <p class="product-price">$6.50</p>
+                        <h4 class="product-subtext" data-index="0">Waffle with berries</h4>
+                        <p class="product-price" data-index="0" data-price="6.50">$6.50</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="0">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-creme-brulee-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Creme Brulee</p>
-                        <h4 class="product-subtext">Vanilla Bean Creme Brulee</h4>
-                        <p class="product-price">$7.00</p>
+                        <h4 class="product-subtext" data-index="1">Vanilla Bean Creme Brulee</h4>
+                        <p class="product-price" data-index="1" data-price="7.00">$7.00</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="1">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-macaron-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Macaron</p>
-                        <h4 class="product-subtext">Macaron Mix of Five</h4>
-                        <p class="product-price">$8.00</p>
+                        <h4 class="product-subtext" data-index="2">Macaron Mix of Five</h4>
+                        <p class="product-price" data-index="2" data-price="8.00">$8.00</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="2">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-tiramisu-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Tiramisu</p>
-                        <h4 class="product-subtext">Classic Tiramisu</h4>
-                        <p class="product-price">$5.50</p>
+                        <h4 class="product-subtext" data-index="3">Classic Tiramisu</h4>
+                        <p class="product-price" data-index="3" data-price="5.50">$5.50</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="3">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-baklava-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Baklava</p>
-                        <h4 class="product-subtext">Pistachio Baklava</h4>
-                        <p class="product-price">$4.00</p>
+                        <h4 class="product-subtext" data-index="4">Pistachio Baklava</h4>
+                        <p class="product-price" data-index="4" data-price="4.00">$4.00</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="4">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-meringue-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Pie</p>
-                        <h4 class="product-subtext">Lemon Meringue Pie</h4>
-                        <p class="product-price">$5.00</p>
+                        <h4 class="product-subtext" data-index="5">Lemon Meringue Pie</h4>
+                        <p class="product-price" data-index="5" data-price="5.00">$5.00</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="5">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-cake-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Cake</p>
-                        <h4 class="product-subtext">Red Velvet Cake</h4>
-                        <p class="product-price">$4.50</p>
+                        <h4 class="product-subtext" data-index="6">Red Velvet Cake</h4>
+                        <p class="product-price" data-index="6" data-price="4.50">$4.50</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="6">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-brownie-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Brownie</p>
-                        <h4 class="product-subtext">Salted Caramel Brownie</h4>
-                        <p class="product-price">$5.50</p>
+                        <h4 class="product-subtext" data-index="7">Salted Caramel Brownie</h4>
+                        <p class="product-price" data-index="7" data-price="5.50">$5.50</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="7">Add to Cart</button>
                 </div>
                 <div class="cart-container">
                     <img src="/assets/images/image-panna-cotta-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Panna Cotta</p>
-                        <h4 class="product-subtext">Vanilla Panna Cotta</h4>
-                        <p class="product-price">$6.50</p>
+                        <h4 class="product-subtext" data-index="8">Vanilla Panna Cotta</h4>
+                        <p class="product-price" data-index="8" data-price="6.50">$6.50</p>
                     </div>
-                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="add-to-cart" data-index="8">Add to Cart</button>
                 </div>
             </div>
         </div>
+        
 
 
         <div class="confirm-cart">
@@ -111,7 +113,8 @@
                 <ul class="cart-items-list"></ul>
             </div>
             <div class="cart-total">
-                <p>Total: $<span class="total-cost">0.00</span></p>
+                <p>Order Total:</p>
+                <p class="total-cost">$0.00</p>
             </div>
         </div>
     </div> 
