Removed duplicate event listeners on buttons. Adjusted the logic to remove activeButtonIndex to allow multiple buttons to be active.

--- a/index.html
+++ b/index.html
@@ -112,9 +112,12 @@
                 </div>
                 <ul class="cart-items-list"></ul>
             </div>
-            <div class="cart-total">
-                <p>Order Total:</p>
-                <p class="total-cost">$0.00</p>
+            <div class="cart-summary">
+                <div class="order-total-area">
+                    <p class="order-text">Order Total</p>
+                    <p class="total-cost">$0.00</p>
+                </div>
+                <button class="confirm-order">Confirm Order</button>
             </div>
         </div>
     </div> 
