--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="product-container">
             <h1 class="dessert-heading">Desserts</h1>
             <div class="menu-container">
-                <div class="cart-container">
+                <div class="cart-container" data-index="0">
                     <img src="/assets/images/image-waffle-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Waffle</p>
@@ -26,7 +26,7 @@
                     </div>
                     <button class="add-to-cart" data-index="0">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="1">
                     <img src="/assets/images/image-creme-brulee-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Creme Brulee</p>
@@ -35,7 +35,7 @@
                     </div>
                     <button class="add-to-cart" data-index="1">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="2">
                     <img src="/assets/images/image-macaron-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Macaron</p>
@@ -44,7 +44,7 @@
                     </div>
                     <button class="add-to-cart" data-index="2">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="3">
                     <img src="/assets/images/image-tiramisu-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Tiramisu</p>
@@ -53,7 +53,7 @@
                     </div>
                     <button class="add-to-cart" data-index="3">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="4">
                     <img src="/assets/images/image-baklava-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Baklava</p>
@@ -62,7 +62,7 @@
                     </div>
                     <button class="add-to-cart" data-index="4">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="5">
                     <img src="/assets/images/image-meringue-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Pie</p>
@@ -71,7 +71,7 @@
                     </div>
                     <button class="add-to-cart" data-index="5">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="6">
                     <img src="/assets/images/image-cake-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Cake</p>
@@ -80,7 +80,7 @@
                     </div>
                     <button class="add-to-cart" data-index="6">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="7">
                     <img src="/assets/images/image-brownie-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Brownie</p>
@@ -89,7 +89,7 @@
                     </div>
                     <button class="add-to-cart" data-index="7">Add to Cart</button>
                 </div>
-                <div class="cart-container">
+                <div class="cart-container" data-index="8">
                     <img src="/assets/images/image-panna-cotta-desktop.jpg" alt="" class="product-image">
                     <div class="product-details">
                         <p class="product-name">Panna Cotta</p>
@@ -121,6 +121,8 @@
             </div>
         </div>
     </div> 
+
+    
 
 </body>
 </html>
