--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="backdrop" style="display: none;"></div>
         <div class="product-container">
             <h1 class="dessert-heading">Desserts</h1>
             <div class="menu-container">
@@ -101,8 +102,6 @@
             </div>
         </div>
         
-
-
         <div class="confirm-cart">
             <div class="cart-heading">Your Cart (0)</div>
             <div class="cart-content">
