modified empty cart start UI

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </div>
             <div class="cart-summary">
                 <div class="order-total-area">
-                    <p class="order-text">Order Total</p>
-                    <p class="total-cost">$0.00</p>
+                    <p class="order-text"></p>
+                    <p class="total-cost"></p>
                 </div>
                 <button class="confirm-order">Confirm Order</button>
             </div>
